# jedex_api

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 76cb8f855b59_update_contract_migration.py  c33731fe191e_initial_migration.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: calculate_freight.py  company.py  contract.py
app/core/: __init__.py  config.py  constants.py  database.py  dependencies.py  enums.py
app/models/: company.py  contract.py  postal_code_range.py  shipment.py
app/schemas/: company.py  contract.py  dimension.py  distance.py  freight.py  postal_code_range.py
app/services/: address_service.py  company_service.py  contract_service.py  freight_service.py
