[tool.poetry]
name = "jedex"
version = "0.1.0"
description = "Jedex - API de entregas"
authors = ["Jeferson Ferreira da Silva <jeferson.mab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic = "^2.7.4"
requests = "^2.31.0"
psycopg2-binary = "^2.9.7"
pydantic-settings = "^2.3.3"
[tool.poetry.dev-dependencies]
pytest = "8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
